--- a/index.html
+++ b/index.html
@@ -10,40 +10,64 @@
 </head>
 
 <body>
+  <!-- Desktop -->
+  <div class="container-desktop">
+    <header class="header">
+      <a href="#" class="link">
+        <img src="./images/logo.svg" alt="Логотип" class="header__logo" />
+      </a>
+      <nav class="header__menu">
+        <ul class="header__list">
+          <li class="header__list_item">калькулятор <br>стоимости</br></li>
+          <li class="header__list_item">помощник выбора <br>бетона</br></li>
+          <li class="header__list_item">цены и доставка</li>
+          <li class="header__list_item">акции и статьи</li>
+          <li class="header__list_item">контакты</li>
+          <li class="header__list_item">стать франчайзи</li>
+        </ul>
+      </nav>
+    </header>
+    <main class="content">
+      <h1 class="title">сайт еще <br>в разработке</br></h1>
+      <div class="container__plug">
+        <p class="plug__info">
+          Мы хотим сделать его удобным и современным, на это нужно время. Но наши заводы уже работают. Поэтому пока что,
+          связывайтесь с нашими консультантами любым удобным способом.
+        </p>
+        <nav class="nav__contacts">
+          <ul class="contacts__list">
+            <li class="contacts__list_item"><a class="contacts__list_item-phone" href="tel:83452515100">+7 (3452) 515-100</a></li>
+            <li class="contacts__list_item"><a class="contacts__list_item" href="mailto: hello@konkrid.ru">hello@konkrid.ru</a></li>
+          </ul>
+        </nav>
+    </div>
+      <img src="./images/volvo.png" alt="бетономешалка" class="volvo">
+  </main>
+</div>
+<!-- Mobile -->
+<div class="container-mobile">
   <header class="header">
     <a href="#" class="link">
       <img src="./images/logo.svg" alt="Логотип" class="header__logo" />
     </a>
-    <nav class="header__menu">
-      <ul class="header__list">
-        <li class="header__list_item">калькулятор <br>стоимости</br></li>
-        <li class="header__list_item">помощник выбора <br>бетона</br></li>
-        <li class="header__list_item">цены и доставка</li>
-        <li class="header__list_item">акции и статьи</li>
-        <li class="header__list_item">контакты</li>
-        <li class="header__list_item">стать франчайзи</li>
+    <nav class="nav__contacts">
+      <ul class="contacts__list">
+        <li class="contacts__list_item"><a class="contacts__list_item-phone" href="tel:83452515100">+7 (3452) 515-100</a></li>
+        <li class="contacts__list_item"><a class="contacts__list_item" href="mailto: hello@konkrid.ru">hello@konkrid.ru</a></li>
       </ul>
     </nav>
   </header>
   <main class="content">
-    <h1 class="title">сайт еще <br>в разработке</br></h1>
+    <h1 class="title">сайт еще <br> в разработке </br></h1>
     <div class="container__plug">
       <p class="plug__info">
         Мы хотим сделать его удобным и современным, на это нужно время. Но наши заводы уже работают. Поэтому пока что,
         связывайтесь с нашими консультантами любым удобным способом.
       </p>
-      <nav class="nav__contacts">
-        <ul>
-          <li>+7 (3452) 515-100</li>
-          <li>hello@konkrid.ru</li>
-          <li>телеграм</li>
-          <li>ватсап</li>
-          <li>интсаграм</li>
-        </ul>
-      </nav>
-    </div>
+  </div>
     <img src="./images/volvo.png" alt="бетономешалка" class="volvo">
-  </main>
+</main>
+</div>
   <script src="./index.js"></script>
 </body>
 
