--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <nav class="nav__contacts">
           <ul class="contacts__list">
             <li class="contacts__list_item"><a class="contacts__list_item-phone" href="tel:83452515100">+7 (3452) 515-100</a></li>
-            <li class="contacts__list_item"><a class="contacts__list_item" href="mailto: hello@konkrid.ru">hello@konkrid.ru</a></li>
+            <li class="contacts__list_item"><a class="contacts__list_item" href="mailto: konkrid72@mail.ru">konkrid72@mail.ru</a></li>
           </ul>
         </nav>
     </div>
@@ -53,7 +53,7 @@
     <nav class="nav__contacts">
       <ul class="contacts__list">
         <li class="contacts__list_item"><a class="contacts__list_item-phone" href="tel:83452515100">+7 (3452) 515-100</a></li>
-        <li class="contacts__list_item"><a class="contacts__list_item" href="mailto: hello@konkrid.ru">hello@konkrid.ru</a></li>
+        <li class="contacts__list_item"><a class="contacts__list_item" href="mailto: konkrid72@mail.ru">konkrid72@mail.ru</a></li>
       </ul>
     </nav>
   </header>
