add price and modals

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
       </a>
       <nav class="header__menu">
         <ul class="header__list">
-          <li class="header__list_item">калькулятор <br>стоимости</br></li>
-          <li class="header__list_item">помощник выбора <br>бетона</br></li>
-          <li class="header__list_item">цены и доставка</li>
-          <li class="header__list_item">акции и статьи</li>
-          <li class="header__list_item">контакты</li>
-          <li class="header__list_item">стать франчайзи</li>
+          <li data-title="Пока эти ссылки не активны. Мы ведь предупредили, что сайт в разработке, вы чего." class="header__list_item">калькулятор <br>стоимости</br></li>
+          <li data-title="Пока эти ссылки не активны. Мы ведь предупредили, что сайт в разработке, вы чего." class="header__list_item">помощник выбора <br>бетона</br></li>
+          <li data-title="Пока эти ссылки не активны. Мы ведь предупредили, что сайт в разработке, вы чего." class="header__list_item">цены и доставка</li>
+          <li data-title="Пока эти ссылки не активны. Мы ведь предупредили, что сайт в разработке, вы чего." class="header__list_item">акции и статьи</li>
+          <li data-title="Пока эти ссылки не активны. Мы ведь предупредили, что сайт в разработке, вы чего." class="header__list_item">контакты</li>
+          <li data-title="Пока эти ссылки не активны. Мы ведь предупредили, что сайт в разработке, вы чего." class="header__list_item">стать франчайзи</li>
         </ul>
       </nav>
     </header>
@@ -36,8 +36,9 @@
         </p>
         <nav class="nav__contacts">
           <ul class="contacts__list">
-            <li class="contacts__list_item"><a class="contacts__list_item-phone" href="tel:83452515100">+7 (3452) 515-100</a></li>
-            <li class="contacts__list_item"><a class="contacts__list_item" href="mailto: konkrid72@mail.ru">konkrid72@mail.ru</a></li>
+            <li class="contacts__list_item"><a class="contacts__list_item-phone" href="#">+7 (3452) 515-100</a></li>
+            <li class="contacts__list_item"><a class="contacts__list_item-email" href="#">konkrid72@mail.ru</a></li>
+            <li class="contacts__list_item"><a class="contacts__list_item-price" href="/price.pdf" target="_blank">прайс-лист</a></li>
           </ul>
         </nav>
     </div>
@@ -53,7 +54,8 @@
     <nav class="nav__contacts">
       <ul class="contacts__list">
         <li class="contacts__list_item"><a class="contacts__list_item-phone" href="tel:83452515100">+7 (3452) 515-100</a></li>
-        <li class="contacts__list_item"><a class="contacts__list_item" href="mailto: konkrid72@mail.ru">konkrid72@mail.ru</a></li>
+        <li class="contacts__list_item"><a class="contacts__list_item-email" href="mailto: konkrid72@mail.ru">konkrid72@mail.ru</a></li>
+        <li class="contacts__list_item"><a class="contacts__list_item-price" href="/price.pdf" target="_blank">прайс-лист</a></li>
       </ul>
     </nav>
   </header>
