--- a/index.html
+++ b/index.html
@@ -6,70 +6,37 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./index.css" />
-  <title>Евробетон</title>
+  <title>konkrid</title>
 </head>
 
 <body>
-  <!-- Desktop -->
-  <div class="container-desktop">
-    <header class="header">
-      <a href="#" class="link">
-        <img src="./images/logo.svg" alt="Логотип" class="header__logo" />
-      </a>
-      <nav class="header__menu">
-        <ul class="header__list">
-          <li data-title="Пока эти ссылки не активны. Мы ведь предупредили, что сайт в разработке, вы чего." class="header__list_item">калькулятор <br>стоимости</br></li>
-          <li data-title="Пока эти ссылки не активны. Мы ведь предупредили, что сайт в разработке, вы чего." class="header__list_item">помощник выбора <br>бетона</br></li>
-          <li data-title="Пока эти ссылки не активны. Мы ведь предупредили, что сайт в разработке, вы чего." class="header__list_item">цены и доставка</li>
-          <li data-title="Пока эти ссылки не активны. Мы ведь предупредили, что сайт в разработке, вы чего." class="header__list_item">акции и статьи</li>
-          <li data-title="Пока эти ссылки не активны. Мы ведь предупредили, что сайт в разработке, вы чего." class="header__list_item">контакты</li>
-          <li data-title="Пока эти ссылки не активны. Мы ведь предупредили, что сайт в разработке, вы чего." class="header__list_item">стать франчайзи</li>
-        </ul>
-      </nav>
-    </header>
-    <main class="content">
-      <h1 class="title">сайт еще <br>в разработке</br></h1>
-      <div class="container__plug">
-        <p class="plug__info">
-          Мы хотим сделать его удобным и современным, на это нужно время. Но наши заводы уже работают. Поэтому пока что,
-          связывайтесь с нашими консультантами любым удобным способом.
-        </p>
-        <nav class="nav__contacts">
-          <ul class="contacts__list">
-            <li class="contacts__list_item"><a class="contacts__list_item-phone" href="#">+7 (3452) 515-100</a></li>
-            <li class="contacts__list_item"><a class="contacts__list_item-email" href="#">konkrid72@mail.ru</a></li>
-            <li class="contacts__list_item"><a class="contacts__list_item-price" href="/price.pdf" target="_blank">прайс-лист</a></li>
-          </ul>
-        </nav>
-    </div>
-      <img src="./images/volvo.png" alt="бетономешалка" class="volvo">
-  </main>
-</div>
-<!-- Mobile -->
-<div class="container-mobile">
+
+<div class="container-desktop">
   <header class="header">
     <a href="#" class="link">
       <img src="./images/logo.svg" alt="Логотип" class="header__logo" />
     </a>
-    <nav class="nav__contacts">
-      <ul class="contacts__list">
-        <li class="contacts__list_item"><a class="contacts__list_item-phone" href="tel:83452515100">+7 (3452) 515-100</a></li>
-        <li class="contacts__list_item"><a class="contacts__list_item-email" href="mailto: konkrid72@mail.ru">konkrid72@mail.ru</a></li>
-        <li class="contacts__list_item"><a class="contacts__list_item-price" href="/price.pdf" target="_blank">прайс-лист</a></li>
+    <nav class="header__menu">
+      <ul class="header__list">
+        <li class="header__list_item">калькулятор <br>стоимости</br></li>
+        <li data-title="Пока эти ссылки не активны. Мы ведь предупредили, что сайт в разработке, вы чего." class="header__list_item">помощник выбора <br>бетона</br></li>
+        <li data-title="Пока эти ссылки не активны. Мы ведь предупредили, что сайт в разработке, вы чего." class="header__list_item">цены и доставка</li>
+        <li data-title="Пока эти ссылки не активны. Мы ведь предупредили, что сайт в разработке, вы чего." class="header__list_item">акции и статьи</li>
+        <li data-title="Пока эти ссылки не активны. Мы ведь предупредили, что сайт в разработке, вы чего." class="header__list_item">контакты</li>
+        <li data-title="Пока эти ссылки не активны. Мы ведь предупредили, что сайт в разработке, вы чего." class="header__list_item">стать франчайзи</li>
       </ul>
     </nav>
   </header>
-  <main class="content">
-    <h1 class="title">сайт еще <br> в разработке </br></h1>
-    <div class="container__plug">
-      <p class="plug__info">
-        Мы хотим сделать его удобным и современным, на это нужно время. Но наши заводы уже работают. Поэтому пока что,
-        связывайтесь с нашими консультантами любым удобным способом.
-      </p>
-  </div>
+  <div class="content">
+    <h1 class="title"></h1>
+    <div class="container__number">
+      <div class="main__number">233<span class="icon__info">i</span></div>
+
+    </div>
     <img src="./images/volvo.png" alt="бетономешалка" class="volvo">
-</main>
+  </div>
 </div>
+
   <script src="./index.js"></script>
 </body>
 
