--- a/pages/calc.html
+++ b/pages/calc.html
@@ -12,7 +12,7 @@
         <meta name="HandheldFriendly" content="true">
 
         <!--[if (gt IE 9)|!(IE)]><!-->
-        <link href="/css/mainl885v.css" rel="stylesheet" type="text/css">
+        <link href="../css/mainl885v.css" rel="stylesheet" type="text/css">
         <!--<![endif]-->
         <meta property="og:title" content="#{data.title}">
         <meta property="og:title" content="">
@@ -32,11 +32,21 @@
 
     <body class="page">
         <header class="header">
-            <div class="logo">
-                <img src="./images/logo.svg" alt="Логотип компании" width="165" height="181">
-            </div>
+            <a href="../index.html" class="logo">
+                <img src="../images/logo.svg" alt="Логотип" class="header__logo" />
+            </a>
             <div class="header__wrapper">
-                <nav class="header__nav j-header__nav nav">
+                <nav class="desktop header__menu header__menu_main">
+                    <ul class="header__list">
+                        <li class="header__list_item"><a href="./calc.html" class="main__menu_item"> калькулятор <br>стоимости</br></a></li>
+                        <li class="header__list_item">помощник выбора <br>бетона</br></li>
+                        <li data-title="Пока эти ссылки не активны. Мы ведь предупредили, что сайт в разработке, вы чего." class="header__list_item">цены и доставка</li>
+                        <li data-title="Пока эти ссылки не активны. Мы ведь предупредили, что сайт в разработке, вы чего." class="header__list_item">акции и статьи</li>
+                        <li class="header__list_item"><a href="./contacts.html" class="main__menu_item">контакты</a></li>
+                        <li data-title="Пока эти ссылки не активны. Мы ведь предупредили, что сайт в разработке, вы чего." class="header__list_item">стать франчайзи</li>
+                    </ul>
+                </nav>
+                <nav class="mobile header__nav j-header__nav nav">
                     <div class="nav__icon j-nav__icon"><span> </span><span> </span><span></span>
                     </div>
                     <div class="nav__items-wrapper j-nav__items-wrapper">
@@ -65,7 +75,7 @@
                     <h1 class="main-title">Калькулятор стоимости</h1>
                     <h3 class="main-subtitle">Вы можете рассчитать стоимость бетона с помошью калькулятора. Если вы не уверены какой бетон вам нужен, выберите из списка что строите и мы подскажем какой материал вам нужен</h3>
                     <div class="calc__block">
-                        <form class="form form--calc" action="">
+                        <form id="formBeton" class="form form--calc" action="">
                             <div class="form__input-block form__input-area--calc">
                                 <div class="form__input-area">
                                     <input class="form__input--calc j-form__input--calc" type="text" name="userBeton" readonly>
@@ -101,10 +111,13 @@
                                     <input class="j-input-close" type="text" name="userAdress"><span class="form__input-placeholder">Район доставки</span><span class="form__input-price">12 200 ₽</span>
                                 </div>
                             </div>
-                            <div class="form__price-block"> <span>общая стоимость</span><span class="form__price j-form__price">118 750 ₽</span>
+                            <div class="form__price-block">
+                                <span>Общая стоимость</span>
+                                <span class="form__price j-form__price">118 750 ₽</span>
+                                <span class="form__description form__description--desc">Цена рассчитана по прайсу. Дополнительную информацию о стоимости с учетом акций и скидок уточняйте в отделе продаж по&nbspтелефону<a href="tel:+73452500301">+7 (3452) 500-301</a></span>
                             </div>
-                            <div class="form__button-block"> <span class="form__description">Цена рассчитана по прайсу. Дополнительную информацию о стоимости с учетом акций и скидок уточняйте в отделе продаж по телефону<a href="tel:+73452500301">+7 (3452) 500-301</a></span>
-                                <button class="btn btn--orange" type="submit">Отправить заявку</button>
+                            <div class="form__button-block"> <span class="form__description">Цена рассчитана по прайсу. Дополнительную информацию о стоимости с учетом акций и скидок уточняйте в отделе продаж по&nbspтелефону<a href="tel:+73452500301">+7 (3452) 500-301</a></span>
+                                <button class="btn btn--orange btn-hover" type="submit">Отправить заявку</button>
                             </div>
                         </form>
                     </div>
@@ -138,13 +151,13 @@
                     </div>
                     <div class="quest__form">
                         <h2 class="title">Остались вопросы?</h2><span class="quest__sub-text">Пишите, звоните, заходите на кофе. Мы всегда вам рады.</span>
-                        <form class="form" id="form" action="">
+                        <form id="formContact" class="form" id="form" action="">
                             <div class="form__input-block">
                                 <div class="form__input-area">
                                     <input type="text" name="userName"><span class="form__input-placeholder">Имя</span>
                                 </div>
                                 <div class="form__input-area">
-                                    <input type="number" name="userPhone"><span class="form__input-placeholder">Телефон</span>
+                                    <input name="userPhone" id="phone"><span class="form__input-placeholder">Телефон</span>
                                 </div>
                                 <div class="form__input-area form__input-area--textarea">
                                     <div class="form__textarea">
@@ -153,7 +166,7 @@
                                 </div>
                             </div>
                             <div class="form__button-block">
-                                <button class="btn btn--orange" type="submit">Отправить</button><span class="form__description">Нажимая кнопку “отправить” вы подтверждаете, что ознакомлены и согласны с условиями<a href="#!">политики конфиденциальности</a></span>
+                                <button class="btn btn--orange btn-hover" type="submit">Отправить</button><span class="form__description">Нажимая кнопку “отправить” вы подтверждаете, что ознакомлены и согласны с условиями<a href="#!">политики конфиденциальности</a></span>
                             </div>
                         </form>
                     </div>
@@ -163,13 +176,16 @@
         <footer class="footer">
             <footer class="footer__wrapper">
                 <div class="footer__img">
-                    <img src="/images/volvo.png" alt="Volvo">
+                    <img src="../images/volvo.png" alt="Volvo">
                 </div>
             </footer>
         </footer>
 
-
-        <script src="static/js/mainl885v.min.js"></script>
+        <script src="../vendor/plugins/jquery/3.6.0/jquery-3.6.0.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
+        <script src="../vendor/plugins/jquery/ui/jquery-ui.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
+        <script src="../js/header.js"></script>
     </body>
 
 </html>
