--- a/pages/calc.html
+++ b/pages/calc.html
@@ -13,6 +13,7 @@
 
         <!--[if (gt IE 9)|!(IE)]><!-->
         <link href="../css/mainl885v.css" rel="stylesheet" type="text/css">
+        <link href="../index.css" rel="stylesheet" type="text/css">
         <!--<![endif]-->
         <meta property="og:title" content="#{data.title}">
         <meta property="og:title" content="">
@@ -31,44 +32,42 @@
     </head>
 
     <body class="page">
-        <header class="header">
-            <a href="../index.html" class="logo">
-                <img src="../images/logo.svg" alt="Логотип" class="header__logo" />
-            </a>
-            <div class="header__wrapper">
-                <nav class="desktop header__menu header__menu_main">
-                    <ul class="header__list">
-                        <li class="header__list_item"><a href="./calc.html" class="main__menu_item"> калькулятор <br>стоимости</br></a></li>
-                        <li class="header__list_item">помощник выбора <br>бетона</br></li>
-                        <li data-title="Пока эти ссылки не активны. Мы ведь предупредили, что сайт в разработке, вы чего." class="header__list_item">цены и доставка</li>
-                        <li data-title="Пока эти ссылки не активны. Мы ведь предупредили, что сайт в разработке, вы чего." class="header__list_item">акции и статьи</li>
-                        <li class="header__list_item"><a href="./contacts.html" class="main__menu_item">контакты</a></li>
-                        <li data-title="Пока эти ссылки не активны. Мы ведь предупредили, что сайт в разработке, вы чего." class="header__list_item">стать франчайзи</li>
-                    </ul>
-                </nav>
-                <nav class="mobile header__nav j-header__nav nav">
-                    <div class="nav__icon j-nav__icon"><span> </span><span> </span><span></span>
-                    </div>
-                    <div class="nav__items-wrapper j-nav__items-wrapper">
-                        <div class="nav__decoration"></div>
-                        <ul class="nav__items">
-                            <li> <a href="#!">Калькулятор стоимости</a>
-                            </li>
-                            <li> <a href="#!">Помощник выбора бетона</a>
-                            </li>
-                            <li> <a href="#!">Цены и доставка</a>
-                            </li>
-                            <li> <a href="#!">Акции и статьи</a>
-                            </li>
-                            <li> <a href="#!">Контакты</a>
-                            </li>
-                            <li> <a href="#!">Стать франчайзи     </a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
+    <header class="header">
+        <a href="../index.html" class="link">
+            <img src="../images/logo.svg" alt="Логотип" class="header__logo" />
+        </a>
+        <nav class="desktop header__menu header__menu_main">
+            <ul class="header__list">
+                <li class="header__list_item"><a href="./calc.html" class="main__menu_item"> калькулятор <br>стоимости</br></a></li>
+                <li class="header__list_item">помощник выбора <br>бетона</br></li>
+                <li class="header__list_item"><a href="./price.html" class="main__menu_item">цены и доставка</a></li>
+                <li data-title="Пока эти ссылки не активны. Мы ведь предупредили, что сайт в разработке, вы чего." class="header__list_item">акции и статьи</li>
+                <li class="header__list_item"><a href="./contacts.html" class="main__menu_item">контакты</a></li>
+                <li class="header__list_item"><a href="./gallery.html" class="main__menu_item">галерея</a></li>
+            </ul>
+        </nav>
+        <nav class="mobile header__nav j-header__nav nav">
+            <div class="nav__icon j-nav__icon"><span> </span><span> </span><span></span>
             </div>
-        </header>
+            <div class="nav__items-wrapper j-nav__items-wrapper">
+                <div class="nav__decoration"></div>
+                <ul class="nav__items">
+                    <li> <a href="./calc.html" class="main__menu_item">Калькулятор стоимости</a>
+                    </li>
+                    <li> <a href="#!">Помощник выбора бетона</a>
+                    </li>
+                    <li> <a href="./price.html" class="main__menu_item">Цены и доставка</a>
+                    </li>
+                    <li> <a href="#!">Акции и статьи</a>
+                    </li>
+                    <li> <a href="./contacts.html" class="main__menu_item">контакты</a>
+                    </li>
+                    <li><a href="./gallery.html" class="main__menu_item">галерея</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
         <main class="main">
             <section class="calc">
                 <div class="calc__wrapper">
