--- a/pages/price.html
+++ b/pages/price.html
@@ -147,10 +147,10 @@
                     </div>
                 </div>
             </div>
-
+            <div class="pump__title pump__title-desktop">Бетононасос</div>
             <div class="pump__container">
                 <div class="pump__container-left">
-                    <div class="pump__title">Бетононасос</div>
+                    <div class="pump__title pump__title-mobile">Бетононасос</div>
                     <div class="pump__deep bg-white">11-18 метров автобетононасос</div>
                     <div class="pump__info bg-gray">
                         <div class="pump__power">до 25 м<sup>3</sup></div>
