--- a/pages/price.html
+++ b/pages/price.html
@@ -154,7 +154,7 @@
                     <div class="pump__deep bg-white">11-18 метров автобетононасос</div>
                     <div class="pump__info bg-gray">
                         <div class="pump__power">до 25 м<sup>3</sup></div>
-                        <div class="pupm__price">7 500₽</div>
+                        <div class="pump__price">7 500₽</div>
                     </div>
                     <div class="pump__info bg-gray">
                         <div class="pump__power">25-50<sup>3</sup></div>
