--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     </a>
     <nav class="desktop header__menu header__menu_main">
       <ul class="header__list">
-        <li class="header__list_item"><a href="./pages/calc.html" class="main__menu_item"> калькулятор <br>стоимости</br></a></li>
-        <li class="header__list_item">помощник выбора <br>бетона</br></li>
-        <li class="header__list_item"><a href="./pages/price.html" class="main__menu_item">цены и доставка</a></li>
-        <li data-title="Пока эти ссылки не активны. Мы ведь предупредили, что сайт в разработке, вы чего." class="header__list_item">акции и статьи</li>
-        <li class="header__list_item"><a href="./pages/contacts.html" class="main__menu_item">контакты</a></li>
-        <li class="header__list_item"><a href="./pages/gallery.html" class="main__menu_item">галерея</a></li>
+        <li class="header__list_item"><a href="./pages/calc.html" class="main__menu_item">Калькулятор <br>стоимости</br></a></li>
+        <li class="header__list_item"><a href="./pages/kviz.html" class="main__menu_item">Помощник выбора <br>бетона</br></a></li>
+        <li class="header__list_item"><a href="./pages/price.html" class="main__menu_item">Цены и доставка</a></li>
+        <li class="header__list_item"><a href="./pages/sales.html" class="main__menu_item">Акции и статьи</a></li>
+        <li class="header__list_item"><a href="./pages/contacts.html" class="main__menu_item">Контакты</a></li>
+        <li class="header__list_item"><a href="./pages/gallery.html" class="main__menu_item">Галерея</a></li>
       </ul>
     </nav>
     <nav class="mobile header__nav j-header__nav nav">
@@ -32,15 +32,15 @@
         <ul class="nav__items">
           <li> <a href="./pages/calc.html" class="main__menu_item">Калькулятор стоимости</a>
           </li>
-          <li> <a href="#!">Помощник выбора бетона</a>
+          <li> <a href="./pages/kviz.html" class="main__menu_item">Помощник выбора бетона</a>
           </li>
           <li> <a href="./pages/price.html" class="main__menu_item">Цены и доставка</a>
           </li>
-          <li> <a href="#!">Акции и статьи</a>
+          <li> <a href="./pages/sales.html" class="main__menu_item">Акции и статьи</a>
           </li>
-          <li> <a href="./pages/contacts.html" class="main__menu_item">контакты</a>
+          <li> <a href="./pages/contacts.html" class="main__menu_item">Контакты</a>
           </li>
-          <li><a href="./pages/gallery.html" class="main__menu_item">галерея</a>
+          <li><a href="./pages/gallery.html" class="main__menu_item">Галерея</a>
           </li>
         </ul>
       </div>
