--- a/pages/price.html
+++ b/pages/price.html
@@ -40,12 +40,12 @@
     </a>
     <nav class="desktop header__menu header__menu_main">
         <ul class="header__list">
-            <li class="header__list_item"><a href="./calc.html" class="main__menu_item"> калькулятор <br>стоимости</br></a></li>
-            <li class="header__list_item">помощник выбора <br>бетона</br></li>
+            <li class="header__list_item"><a href="./calc.html" class="main__menu_item">Калькулятор <br>стоимости</br></a></li>
+            <li class="header__list_item"><a href="./kviz.html" class="main__menu_item">Помощник выбора <br>бетона</br></a></li>
             <li class="header__list_item"><a href="./price.html" class="main__menu_item">Цены и доставка</a></li>
-            <li data-title="Пока эти ссылки не активны. Мы ведь предупредили, что сайт в разработке, вы чего." class="header__list_item">акции и статьи</li>
-            <li class="header__list_item"><a href="./contacts.html" class="main__menu_item">контакты</a></li>
-            <li class="header__list_item"><a href="./gallery.html" class="main__menu_item">галерея</a></li>
+            <li class="header__list_item"><a href="./sales.html" class="main__menu_item">Акции и статьи</a></li>
+            <li class="header__list_item"><a href="./contacts.html" class="main__menu_item">Контакты</a></li>
+            <li class="header__list_item"><a href="./gallery.html" class="main__menu_item">Галерея</a></li>
         </ul>
     </nav>
     <nav class="mobile header__nav j-header__nav nav">
@@ -56,15 +56,15 @@
             <ul class="nav__items">
                 <li> <a href="./calc.html" class="main__menu_item">Калькулятор стоимости</a>
                 </li>
-                <li> <a href="#!">Помощник выбора бетона</a>
+                <li> <a href="./kviz.html" class="main__menu_item">Помощник выбора бетона</a>
                 </li>
                 <li> <a href="./price.html" class="main__menu_item">Цены и доставка</a>
                 </li>
-                <li> <a href="#!">Акции и статьи</a>
+                <li> <a href="./sales.html" class="main__menu_item">Акции и статьи</a>
                 </li>
-                <li> <a href="./contacts.html" class="main__menu_item">контакты</a>
+                <li> <a href="./contacts.html" class="main__menu_item">Контакты</a>
                 </li>
-                <li><a href="./gallery.html" class="main__menu_item">галерея</a>
+                <li><a href="./gallery.html" class="main__menu_item">Галерея</a>
                 </li>
             </ul>
         </div>
@@ -181,7 +181,7 @@
                             <input type="text" name="userName"><span class="form__input-placeholder">Имя</span>
                         </div>
                         <div class="form__input-area">
-                            <input id="phone" name="userPhone"><span class="form__input-placeholder">Телефон</span>
+                            <input name="userPhone" id="phone"><span class="form__input-placeholder">Телефон</span>
                         </div>
                         <div class="form__input-area form__input-area--textarea">
                             <div class="form__textarea">
