--- a/pages/calc.html
+++ b/pages/calc.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>default title</title>
+        <title>Калькулятор стоимости</title>
         <meta content="" name="description">
         <meta content="" name="keywords">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,12 +38,12 @@
         </a>
         <nav class="desktop header__menu header__menu_main">
             <ul class="header__list">
-                <li class="header__list_item"><a href="./calc.html" class="main__menu_item"> калькулятор <br>стоимости</br></a></li>
-                <li class="header__list_item">помощник выбора <br>бетона</br></li>
-                <li class="header__list_item"><a href="./price.html" class="main__menu_item">цены и доставка</a></li>
-                <li data-title="Пока эти ссылки не активны. Мы ведь предупредили, что сайт в разработке, вы чего." class="header__list_item">акции и статьи</li>
-                <li class="header__list_item"><a href="./contacts.html" class="main__menu_item">контакты</a></li>
-                <li class="header__list_item"><a href="./gallery.html" class="main__menu_item">галерея</a></li>
+                <li class="header__list_item"><a href="./calc.html" class="main__menu_item">Калькулятор <br>стоимости</br></a></li>
+                <li class="header__list_item"><a href="./kviz.html" class="main__menu_item">Помощник выбора <br>бетона</br></a></li>
+                <li class="header__list_item"><a href="./price.html" class="main__menu_item">Цены и доставка</a></li>
+                <li class="header__list_item"><a href="./sales.html" class="main__menu_item">Акции и статьи</a></li>
+                <li class="header__list_item"><a href="./contacts.html" class="main__menu_item">Контакты</a></li>
+                <li class="header__list_item"><a href="./gallery.html" class="main__menu_item">Галерея</a></li>
             </ul>
         </nav>
         <nav class="mobile header__nav j-header__nav nav">
@@ -54,15 +54,15 @@
                 <ul class="nav__items">
                     <li> <a href="./calc.html" class="main__menu_item">Калькулятор стоимости</a>
                     </li>
-                    <li> <a href="#!">Помощник выбора бетона</a>
+                    <li> <a href="./kviz.html" class="main__menu_item">Помощник выбора бетона</a>
                     </li>
                     <li> <a href="./price.html" class="main__menu_item">Цены и доставка</a>
                     </li>
-                    <li> <a href="#!">Акции и статьи</a>
+                    <li> <a href="./sales.html" class="main__menu_item">Акции и статьи</a>
                     </li>
-                    <li> <a href="./contacts.html" class="main__menu_item">контакты</a>
+                    <li> <a href="./contacts.html" class="main__menu_item">Контакты</a>
                     </li>
-                    <li><a href="./gallery.html" class="main__menu_item">галерея</a>
+                    <li><a href="./gallery.html" class="main__menu_item">Галерея</a>
                     </li>
                 </ul>
             </div>
@@ -74,49 +74,87 @@
                     <h1 class="main-title">Калькулятор стоимости</h1>
                     <h3 class="main-subtitle">Вы можете рассчитать стоимость бетона с помошью калькулятора. Если вы не уверены какой бетон вам нужен, выберите из списка что строите и мы подскажем какой материал вам нужен</h3>
                     <div class="calc__block">
-                        <form id="formBeton" class="form form--calc" action="">
+                        <form class="form form--calc" action="">
                             <div class="form__input-block form__input-area--calc">
                                 <div class="form__input-area">
                                     <input class="form__input--calc j-form__input--calc" type="text" name="userBeton" readonly>
                                     <svg class="svg-arrow" width="19" height="11" viewbox="0 0 19 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M17.3125 1.375L9.5 9.1875L1.6875 1.375" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-                                    </svg><span class="form__input-placeholder">Марка бетона</span><span class="form__input-price">4 300 ₽</span>
+                                    </svg><span class="form__input-placeholder">Марка бетона</span><span class="form__input-price j-beton-price">0 ₽</span>
                                     <ul class="form__input-list j-form__input-list">
                                         <li>
                                             <label>М100 — 4300 ₽/м3
-                                                <input type="radio" name="typeBeton" value="m100">
+                                                <input type="radio" name="typeBeton" value="М100" data-cost="4300">
                                             </label>
                                         </li>
                                         <li>
-                                            <label>М700 — 3200 ₽/м3
-                                                <input type="radio" name="typeBeton" value="m700">
+                                            <label>М150 — 4400 ₽/м3
+                                                <input type="radio" name="typeBeton" value="М150" data-cost="4400">
                                             </label>
                                         </li>
                                         <li>
-                                            <label>A560 — 1300 ₽/м3
-                                                <input type="radio" name="typeBeton" value="a560">
+                                            <label>М200 — 4600 ₽/м3
+                                                <input type="radio" name="typeBeton" value="М200" data-cost="4600">
+                                            </label>
+                                        </li>
+                                        <li>
+                                            <label>М250 — 4800 ₽/м3
+                                                <input type="radio" name="typeBeton" value="М250" data-cost="4800">
+                                            </label>
+                                        </li>
+                                        <li>
+                                            <label>М300 — 4950 ₽/м3
+                                                <input type="radio" name="typeBeton" value="М300" data-cost="4950">
+                                            </label>
+                                        </li>
+                                        <li>
+                                            <label>М350 — 5100 ₽/м3
+                                                <input type="radio" name="typeBeton" value="М350" data-cost="5100">
+                                            </label>
+                                        </li>
+                                        <li>
+                                            <label>М400 — 5350 ₽/м3
+                                                <input type="radio" name="typeBeton" value="М400" data-cost="5350">
+                                            </label>
+                                        </li>
+                                        <li>
+                                            <label>ПБ М100 — 4250 ₽/м3
+                                                <input type="radio" name="typeBeton" value="ПБМ100" data-cost="4250">
+                                            </label>
+                                        </li>
+                                        <li>
+                                            <label>ПБ М150 — 4500 ₽/м3
+                                                <input type="radio" name="typeBeton" value="ПБМ150" data-cost="4500">
+                                            </label>
+                                        </li>
+                                        <li>
+                                            <label>ПБ М200 — 4750 ₽/м3
+                                                <input type="radio" name="typeBeton" value="ПБМ200" data-cost="4750">
+                                            </label>
+                                        </li>
+                                        <li>
+                                            <label>ПБ М250 — 5050₽/м3
+                                                <input type="radio" name="typeBeton" value="ПБМ250" data-cost="5050">
                                             </label>
                                         </li>
                                     </ul>
                                 </div>
                                 <div class="form__input-area">
-                                    <input type="number" name="userSpace"><span class="form__input-placeholder">Объем, м3</span><span class="form__input-price">6 130 ₽</span>
+                                    <input type="number" name="userSpace"><span class="form__input-placeholder">Объем, м3</span><span class="form__input-price j-space-price">0 ₽</span>
                                 </div>
                                 <div class="form__input-area">
                                     <svg class="svg-close" width="25" height="25" viewbox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M19.5312 5.46875L5.46875 19.5312" stroke="#E7411B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
                                         <path d="M19.5312 19.5312L5.46875 5.46875" stroke="#E7411B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
                                     </svg>
-                                    <input class="j-input-close" type="text" name="userAdress"><span class="form__input-placeholder">Район доставки</span><span class="form__input-price">12 200 ₽</span>
+                                    <input class="j-input-close" type="text" name="userAdress"><span class="form__input-placeholder">Район доставки</span><span class="form__input-price j-delivery-price">0 ₽</span>
                                 </div>
                             </div>
-                            <div class="form__price-block">
-                                <span>Общая стоимость</span>
-                                <span class="form__price j-form__price">118 750 ₽</span>
+                            <div class="form__price-block"> <span>Общая стоимость</span><span class="form__price j-form__price">0 ₽</span>
                                 <span class="form__description form__description--desc">Цена рассчитана по прайсу. Дополнительную информацию о стоимости с учетом акций и скидок уточняйте в отделе продаж по&nbspтелефону<a href="tel:+73452500301">+7 (3452) 500-301</a></span>
                             </div>
-                            <div class="form__button-block"> <span class="form__description">Цена рассчитана по прайсу. Дополнительную информацию о стоимости с учетом акций и скидок уточняйте в отделе продаж по&nbspтелефону<a href="tel:+73452500301">+7 (3452) 500-301</a></span>
-                                <button class="btn btn--orange btn-hover" type="submit">Отправить заявку</button>
+                            <div class="form__button-block"> <span class="form__description">Цена рассчитана по прайсу. Дополнительную информацию о стоимости с учетом акций и скидок уточняйте в отделе продаж по телефону<a href="tel:+73452500301">+7 (3452) 500-301</a></span>
+                                <button class="btn btn--orange" type="submit">Отправить заявку</button>
                             </div>
                         </form>
                     </div>
@@ -132,7 +170,7 @@
                         </div>
                         <div class="calc__answer-block">
                             <h3 class="main-subtitle main-subtitle--wrap">Выезд специалиста</h3>
-                            <p>Вы можете бесплатно вызвать специалиста на объект.Он оценит подъездные пути для миксера, посмотрит площадку под автобетононасос, поможет рассчитать объем бетона и определит качество собранной опалубки.</p>
+                            <p>Вы можете бесплатно вызвать специалиста на объект. Он оценит подъездные пути для миксера, посмотрит площадку под автобетононасос, поможет рассчитать объем бетона и определит качество собранной опалубки.</p>
                         </div>
                         <div class="calc__answer-block">
                             <h3 class="main-subtitle main-subtitle--wrap">Контроль качества</h3>
@@ -145,7 +183,7 @@
                         </div>
                         <div class="calc__answer-block">
                             <h3 class="main-subtitle main-subtitle--wrap">Точность в&nbspобъеме</h3>
-                            <p>Заказанный объем бетон, доставляется в полном соответствии с заказом, и при высоких показателях его качества. Можете быть уверены, мы доставим вам точное значение объема бетона.</p>
+                            <p>Заказанный объем бетона, доставляется в полном соответствии с заказом, и при высоких показателях его качества. Можете быть уверены, мы доставим вам точное значение объема бетона.</p>
                         </div>
                     </div>
                     <div class="quest__form">
