--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link href="../css/mainl885v.css" rel="stylesheet" type="text/css">
+    <title>Галерея</title>
+
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.3.2/css/lightgallery.css" />    <link href="../css/mainl885v.css" rel="stylesheet" type="text/css">
     <link href="../index.css" rel="stylesheet" type="text/css">
     <link href="../css/gallery.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+
 </head>
 <body>
 <header class="header">
@@ -15,12 +17,12 @@
     </a>
     <nav class="desktop header__menu header__menu_main">
         <ul class="header__list">
-            <li class="header__list_item"><a href="./calc.html" class="main__menu_item"> калькулятор <br>стоимости</br></a></li>
-            <li class="header__list_item">помощник выбора <br>бетона</br></li>
-            <li class="header__list_item"><a href="./price.html" class="main__menu_item">цены и доставка</a></li>
-            <li data-title="Пока эти ссылки не активны. Мы ведь предупредили, что сайт в разработке, вы чего." class="header__list_item">акции и статьи</li>
-            <li class="header__list_item"><a href="./contacts.html" class="main__menu_item">контакты</a></li>
-            <li class="header__list_item"><a href="./gallery.html" class="main__menu_item">галерея</a></li>
+            <li class="header__list_item"><a href="./calc.html" class="main__menu_item">Калькулятор <br>стоимости</br></a></li>
+            <li class="header__list_item"><a href="./kviz.html" class="main__menu_item">Помощник выбора <br>бетона</br></a></li>
+            <li class="header__list_item"><a href="./price.html" class="main__menu_item">Цены и доставка</a></li>
+            <li class="header__list_item"><a href="./sales.html" class="main__menu_item">Акции и статьи</a></li>
+            <li class="header__list_item"><a href="./contacts.html" class="main__menu_item">Контакты</a></li>
+            <li class="header__list_item"><a href="./gallery.html" class="main__menu_item">Галерея</a></li>
         </ul>
     </nav>
     <nav class="mobile header__nav j-header__nav nav">
@@ -31,15 +33,15 @@
             <ul class="nav__items">
                 <li> <a href="./calc.html" class="main__menu_item">Калькулятор стоимости</a>
                 </li>
-                <li> <a href="#!">Помощник выбора бетона</a>
+                <li> <a href="./kviz.html" class="main__menu_item">Помощник выбора бетона</a>
                 </li>
                 <li> <a href="./price.html" class="main__menu_item">Цены и доставка</a>
                 </li>
-                <li> <a href="#!">Акции и статьи</a>
+                <li> <a href="./sales.html" class="main__menu_item">Акции и статьи</a>
                 </li>
-                <li> <a href="./contacts.html" class="main__menu_item">контакты</a>
+                <li> <a href="./contacts.html" class="main__menu_item">Контакты</a>
                 </li>
-                <li><a href="./gallery.html" class="main__menu_item">галерея</a>
+                <li><a href="./gallery.html" class="main__menu_item">Галерея</a>
                 </li>
             </ul>
         </div>
@@ -59,31 +61,71 @@
             </div>
             <div class="images__container">
                 <div class="images__slide">
-                    <div id="lightgallery" class="images__grid">
-                        <img src="../images/gallery1.jpg" alt="Фото галереи" class="image__item i-big-1"></img>
-                        <img src="../images/gallery-small1.jpg" alt="Фото галереи" class="image__item i-small-1"></img>
-                        <img src="../images/gallery-small2.jpg" alt="Фото галереи" class="image__item i-small-2"></img>
-                        <img src="../images/gallery-small3.jpg" alt="Фото галереи" class="image__item i-small-3"></img>
-                        <img src="../images/gallery-small4.jpg" alt="Фото галереи" class="image__item i-small-4"></img>
-                        <img src="../images/gallery2.jpg" alt="Фото галереи" class="image__item i-big-2"></img>
-                        <img src="../images/gallery3.jpg" alt="Фото галереи" class="image__item i-medium-1"></img>
-                        <img src="../images/gallery4.jpg" alt="Фото галереи" class="image__item i-medium-2"></img>
-                        <img src="../images/gallery5.jpg" alt="Фото галереи" class="image__item i-medium-3"></img>
-                        <img src="../images/gallery6.jpg" alt="Фото галереи" class="image__item i-medium-4"></img>
+                    <div id="lg" class="images__grid">
+                        <a class="image__item i-big-1" href="../images/gallery1.jpg">
+                            <img src="../images/gallery1.jpg" alt="Фото галереи" ></img>
+                        </a>
+                        <a class="image__item i-small-1" href="../images/gallery-small1.jpg">
+                            <img src="../images/gallery-small1.jpg" alt="Фото галереи" ></img>
+                        </a>
+                        <a class="image__item i-small-2" href="../images/gallery-small2.jpg">
+                            <img src="../images/gallery-small2.jpg" alt="Фото галереи" ></img>
+                        </a>
+                        <a class="image__item i-small-3" href="../images/gallery-small3.jpg">
+                             <img src="../images/gallery-small3.jpg" alt="Фото галереи" ></img>
+                        </a>
+                        <a class="image__item i-small-4" href="../images/gallery-small4.jpg">
+                            <img src="../images/gallery-small4.jpg" alt="Фото галереи" ></img>
+                        </a>
+                        <a class="image__item i-big-2" href="../images/gallery2.jpg">
+                            <img src="../images/gallery2.jpg" alt="Фото галереи" ></img>
+                        </a>
+                        <a class="image__item i-medium-1" href="../images/gallery3.jpg">
+                            <img src="../images/gallery3.jpg" alt="Фото галереи" ></img>
+                        </a>
+                        <a class="image__item i-medium-2" href="../images/gallery4.jpg">
+                            <img src="../images/gallery4.jpg" alt="Фото галереи" ></img>
+                        </a>
+                        <a class="image__item i-medium-3" href="../images/gallery5.jpg">
+                            <img src="../images/gallery5.jpg" alt="Фото галереи" ></img>
+                        </a>
+                        <a class="image__item i-medium-4" href="../images/gallery6.jpg">
+                            <img src="../images/gallery6.jpg" alt="Фото галереи" class="image__item i-medium-4"></img>
+                        </a>
                     </div>
                 </div>
                 <div class="images__slide">
-                    <div id="" class="images__grid">
-                        <img src="../images/gallery1.jpg" alt="Фото галереи" class="image__item i-big-1"></img>
-                        <img src="../images/gallery-small1.jpg" alt="Фото галереи" class="image__item i-small-1"></img>
-                        <img src="../images/gallery-small2.jpg" alt="Фото галереи" class="image__item i-small-2"></img>
-                        <img src="../images/gallery-small3.jpg" alt="Фото галереи" class="image__item i-small-3"></img>
-                        <img src="../images/gallery-small4.jpg" alt="Фото галереи" class="image__item i-small-4"></img>
-                        <img src="../images/gallery2.jpg" alt="Фото галереи" class="image__item i-big-2"></img>
-                        <img src="../images/gallery3.jpg" alt="Фото галереи" class="image__item i-medium-1"></img>
-                        <img src="../images/gallery4.jpg" alt="Фото галереи" class="image__item i-medium-2"></img>
-                        <img src="../images/gallery5.jpg" alt="Фото галереи" class="image__item i-medium-3"></img>
-                        <img src="../images/gallery6.jpg" alt="Фото галереи" class="image__item i-medium-4"></img>
+                    <div id="lg1" class="images__grid">
+                        <a class="image__item i-big-1" href="../images/gallery1.jpg">
+                            <img src="../images/gallery1.jpg" alt="Фото галереи" ></img>
+                        </a>
+                        <a class="image__item i-small-1" href="../images/gallery-small1.jpg">
+                            <img src="../images/gallery-small1.jpg" alt="Фото галереи" ></img>
+                        </a>
+                        <a class="image__item i-small-2" href="../images/gallery-small2.jpg">
+                            <img src="../images/gallery-small2.jpg" alt="Фото галереи" ></img>
+                        </a>
+                        <a class="image__item i-small-3" href="../images/gallery-small3.jpg">
+                            <img src="../images/gallery-small3.jpg" alt="Фото галереи" ></img>
+                        </a>
+                        <a class="image__item i-small-4" href="../images/gallery-small4.jpg">
+                            <img src="../images/gallery-small4.jpg" alt="Фото галереи" ></img>
+                        </a>
+                        <a class="image__item i-big-2" href="../images/gallery2.jpg">
+                            <img src="../images/gallery2.jpg" alt="Фото галереи" ></img>
+                        </a>
+                        <a class="image__item i-medium-1" href="../images/gallery3.jpg">
+                            <img src="../images/gallery3.jpg" alt="Фото галереи" ></img>
+                        </a>
+                        <a class="image__item i-medium-2" href="../images/gallery4.jpg">
+                            <img src="../images/gallery4.jpg" alt="Фото галереи" ></img>
+                        </a>
+                        <a class="image__item i-medium-3" href="../images/gallery5.jpg">
+                            <img src="../images/gallery5.jpg" alt="Фото галереи" ></img>
+                        </a>
+                        <a class="image__item i-medium-4" href="../images/gallery6.jpg">
+                            <img src="../images/gallery6.jpg" alt="Фото галереи" class="image__item i-medium-4"></img>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -96,9 +138,8 @@
 <script src="../vendor/plugins/jquery/3.6.0/jquery-3.6.0.min.js"></script>
 <script src="../vendor/plugins/jquery/ui/jquery-ui.min.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-<!--<script src="https://cdn.jsdelivr.net/npm/lightgallery@2.1.5/lightgallery.umd.min.js"></script>-->
-<script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
-<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.3.2/js/lightgallery.js"></script>
 <script src="../js/gallery.js"></script>
 </body>
 </html>
